fixed maps spacing issue BUT need to fix margin left bug on 2nd divs of home page

--- a/frontend/src/components/HomePage/Home.css
+++ b/frontend/src/components/HomePage/Home.css
@@ -1,6 +1,13 @@
 /* ------------------- Home Maps Container ------------------- */
 .home-container {
+    display: grid;
+    grid-template-columns: 3fr 2fr;
+
     padding: 30px 70px;
     background-color: #faf8eb;
 
+}
+
+.home-container div:nth-child(2) {
+    margin-left: 20px;
 }
