--- a/frontend/src/components/NavBars/Navigation/Navigation.css
+++ b/frontend/src/components/NavBars/Navigation/Navigation.css
@@ -8,6 +8,7 @@
     top: 0;
     margin: 0;
     padding: 25px 70px;
+    background-color: #faf8eb;
     border-bottom: 1px solid #e2decd;
     box-shadow: 0 5px 7px -7px #b8b4a2;
 }
